# mod-lab06-markov

./: CMakeLists.txt
.github/workflows/: release.yml
include/: textgen.h
result/: gen.txt
src/: main.cpp  textgen.cpp
test/: input.txt
